Bug Fix- Error details

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <div class="header">Is your Birthday Palindrome?</div>
+    <div class="header">Is your Birthday Palindrome?
+       
+    </div>
     <div class="container">
+  
      <div class="inputs">
       <label class="input-child">Enter your birthday :     </label>
       <input class="input-child" type="date" id="birthday" name="birthday">
@@ -18,7 +21,8 @@
     <div class="loader"></div>
     <div class="display"></div>
 </div>
-<footer>
+
+<footer><span class="header-sub">Note- Your birthday will be checked in ddmmyyyy,yyyymmdd,mmddyy,ddmmyy,mmddyyyy,yyddmm</span>
     <a href="https://github.com/jyothishp994"><img src="./images/github.png" /></a>
     <a href="https://www.linkedin.com/in/jyothish-pavithran-490b4a107"><img src="./images/linkedin.png" /></a>
     <a href="https://twitter.com/jyothish94"><img src="./images/twitter.png" /></a>
